@@ -8,6 +8,9 @@
 #
 #==============================================================
 
+R1.2.7  13-Jun-2024  M. Dunning (mdunning)
+        ASTA: Add new scope IOC sioc-as01-sc01
+
 R1.2.6  10-Jun-2024  M. Dunning (mdunning)
         FACET: Add new scope IOC sioc-li20-sc01 for MDO loss fiber scope
 
